--- a/web_dynamic/static/styles/3-header.css
+++ b/web_dynamic/static/styles/3-header.css
@@ -9,3 +9,17 @@ header .logo {
     left: 20px;
     height: 100%;
 }
+
+#api_status {
+    position: absolute;
+    top: 12px;
+    right: 30px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    Background-color: #cccccc;
+}
+
+.available {
+    background-color: #ff545f;
+}
